# zellandine

./: .gitignore  LICENSE  README.md  config.example.yaml  plugin.yaml  pyproject.toml
docs/: architecture.md
scripts/: dream_cycle.sh
src/zellandine/: __init__.py  apply.py  artifact.py  cli.py  collect.py  config.py  consolidate.py  hermes_api.py  install.py  prompts.py  providers.py  prune.py  report.py  run.py  state.py  synthesize.py
templates/: consolidation_prompt.txt  synthesis_prompt.txt
tests/: test_zellandine.py
