[build-system]
requires = ["hatchling>=1.24"]
build-backend = "hatchling.build"

[project]
name = "zellandine"
version = "0.1.0"
description = "Sleep-inspired memory consolidation for Hermes Agent"
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.11"
authors = [
  {name = "Duc Do", email = "do.bruce92@gmail.com"},
]
keywords = ["hermes", "agent", "memory", "dreaming", "consolidation", "self-improving"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = []

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
]
llm = [
  "openai>=1.30.0",
]

[project.scripts]
zellandine = "zellandine.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/zellandine"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
